--- a/src/main/resources/META-INF/pu_production.properties
+++ b/src/main/resources/META-INF/pu_production.properties
@@ -16,3 +16,4 @@
 javax.persistence.jdbc.driver=com.mysql.jdbc.Driver
 javax.persistence.jdbc.url=jdbc:mysql://localhost:3306/seed
 javax.persistence.schema-generation.database.action=create
+javax.persistence.sql-load-script-source = META_INF/data.sql
